# AI_startup_idea_validator

./: README.md  pyproject.toml
src/ai_startup_idea_validator/: crew.py  main.py
src/ai_startup_idea_validator/agents/: competition_moat_agent.py  debate_against_agent.py  debate_for_agent.py  debate_judge_agent.py  economics_monetization_agent.py  execution_risk_agent.py  extraction_agent.py  extraction_logic.py  final_explanation_agent.py  market_demand_agent.py  run_extraction.py
src/ai_startup_idea_validator/api/: main.py
src/ai_startup_idea_validator/data/: known_competitors.json
src/ai_startup_idea_validator/evidence/: evidence_runner.py
src/ai_startup_idea_validator/models/: startup_idea.py
src/ai_startup_idea_validator/pipeline/: run_full_validation.py
src/ai_startup_idea_validator/scoring/: final_aggregator.py
src/ai_startup_idea_validator/scripts/: build_known_competitors.py
src/ai_startup_idea_validator/tests/: test_evidence_pipeline.py  test_full_analysis_pipeline.py
src/ai_startup_idea_validator/tools/: competition_signal_builder.py  competitor_discovery_tool.py  cost_model_tool.py  demand_concepts.py  demand_signal_tool.py  market_size_tool.py  semantic_matcher.py
src/ai_startup_idea_validator/ui/: gradio_app.py
