[project]
name = "ai_startup_idea_validator"
version = "0.1.0"
description = "ai-startup-idea-validator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0"
]

[project.scripts]
ai_startup_idea_validator = "ai_startup_idea_validator.main:run"
run_crew = "ai_startup_idea_validator.main:run"
train = "ai_startup_idea_validator.main:train"
replay = "ai_startup_idea_validator.main:replay"
test = "ai_startup_idea_validator.main:test"
run_with_trigger = "ai_startup_idea_validator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
